Jenkins/conf.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenk-deployment
spec:
  replicas: 6
  selector:
    matchLabels:
      app: jenkins
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:  
    metadata:
      name: jenkins-pod
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenk-container
          image: jenkins/jenkins:latest
          volumeMounts:
          - name: volume-mount
            mountPath: /var/jenkins_home/
      volumes:
        - name: volume-mount
          configMap: 
            name: config1
