Jenkins/configmap.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: congigmap 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jenkins
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:  
    metadata:
      name: jenkins-pod
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenk-container
          image: jenkins/jenkins:latest
          command: [ "/bin/bash", "-ce", "tail -f /dev/null" ]
          volumeMounts:
          - name: conf-volume
            mountPath: /var/jenkins_home/  #/usr/local/tomcat/webapps/
      volumes:
      - name: conf-volume
        configMap: 
          name: pvcong1
