Jenkins/jenkins.yml
apiVersion: v1
kind: Pod
metadata: 
  name: jenkins-pod
  labels:
    app: jenkins
spec: 
  containers: 
  - name: jenkins
    image: jenkins/jenkins:latest
