Jenkins/podAffinity.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenk-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jenkins
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:  
    metadata:
      name: jenkins-pod
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenk-container
          image: jenkins/jenkins:latest
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: app
                  operator: In
                  values:
                    - jenkins
            topologyKey: "kubernetes.io/hostname"
