Jenkins/podLimit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenk-deployment
spec:
  replicas: 6
  selector:
    matchLabels:
      app: jenkins
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:  
    metadata:
      name: jenkins-pod
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenk-container
          image: jenkins/jenkins:latest
          resources: # -->pod limits how much cpu and memory it can use.
            limits:
              cpu: "0.8"
            requests:
              cpu: "0.3"
              memory: 200Mi
