Jenkins/jenkins-clusterIp.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  ports:
  - protocol: TCP
    port: 8090
    targetPort: 80
