Jenkins/secret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jenkins
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:  
    metadata:
      name: jenkins-pod
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenk-container
          image: jenkins/jenkins:latest
          command: [ "/bin/bash", "-ce", "tail -f /dev/null" ]
          volumeMounts:
          - name: secret-volume
            mountPath: /var/jenkins_home/  #/usr/local/tomcat/webapps/
      volumes:
      - name: secret-volume
        secret: 
          secretName: my-secrete
---
apiVersion: v1
kind: Service
metadata:
  name: secret
spec: 
  selector: 
    app: jenkins
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8080
